# AIchatBot

backend/: ai_agent.py  backend.py  pyproject.toml  requirements.txt
echo-chat-modern/: .env  README.md  index.html  tailwind.config.ts  vite.config.ts
echo-chat-modern/src/: index.css
echo-chat-modern/src/components/: ChatInterface.tsx  ChatSidebar.tsx  LoginForm.tsx
echo-chat-modern/src/contexts/: AuthContext.tsx
echo-chat-modern/src/hooks/: useChat.ts
echo-chat-modern/src/pages/: Index.tsx
