[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.26",
    "langchain-groq>=0.3.6",
    "langchain-tavily>=0.2.7",
    "langgraph>=0.5.2",
    "langsmith>=0.4.5",
    "python-dotenv>=1.1.1",
    "langchain-openai>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-mcp-adapters>=0.1.9",
    "mcp>=1.11.0",
    "fastapi>=0.116.1",
    "uvicorn>=0.35.0",
]
